# MskDSPUpper

./: .gitignore  .gitmodules  AGENTS.md  README.md  RELEASING.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: beta.yml  ci.yml  nightly.yml  promote.yml  release.yml  sync-static-updater.yml
doc/: DLT645点位校验补全方案.md  GitHub-Actions与发版策略.md  ModbusRTU界面优化方案.md  上位机重连配置加载竞态修复方案.md  下位机下发前版本一致性校验方案.md  下位机更新上传与提权修复方案.md  打包与交付说明.md
scripts/: dev-browser.sh
scripts/workflow/: Prepare-SubmoduleAccess.ps1  Show-SccacheStats.ps1  Sync-StaticUpdater.ps1  apply-channel-version.mjs  collect-diagnostics.mjs  create-delivery-bundle.mjs  emit-build-metadata.mjs  evaluate-beta-promotion.mjs  promote-beta-tags.mjs  render-tauri-config.mjs  resolve-beta-ref.mjs  restore-manifests.mjs  rewrite-static-updater-manifest.mjs  stage-release.mjs  verify-beta-lineage.mjs  write-sha256sums.mjs
src/: App.tsx  index.css  main.tsx  route-components.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs  proto.rs  protocol_shadow.rs  runtime_paths.rs  state.rs
src-tauri/src/commands/: agc.rs  app_storage.rs  avc.rs  calc.rs  data_center.rs  dlt645.rs  export_config.rs  iec104.rs  lower_update.rs  mod.rs  modbus_rtu.rs  module_ops.rs
src-tauri/src/grpc/: agc.rs  avc.rs  calc.rs  connection.rs  data_center.rs  dlt645.rs  iec104.rs  mod.rs  modbus_rtu.rs  module_manager.rs
src/adapters/: browser.ts  index.ts  lower-update-source.ts  tauri.ts  types.ts
src/layouts/: MainLayout.css  MainLayout.tsx
src/theme/: dark.ts
src/utils/: advanced-config-auth.ts  app-settings-core.ts  app-settings.ts  config-export.ts  connection-copy.ts  control-allocation.ts  control-auto-routing.ts  dashboard-loading.ts  lower-update-auth.ts  lower-update-deploy.ts  manager-connection.ts  mqtt.ts  (+3 more)
(+95 files in other folders)
