[package]
name = "mskdsp-upper"
version = "0.4.1"
description = "MskDSP 上位机"
authors = ["MskDSP Team"]
edition = "2021"

[lib]
name = "mskdsp_upper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mskdsp-upper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.13"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
russh = { version = "0.62.2", default-features = false, features = ["ring"] }
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
